# perapera-anime-maker

./: .gitattributes  .gitignore  CHATGPT_HANDOFF.md  CLAUDE_HANDOFF.md  CMakeLists.txt  CMakePresets.json  DECISIONS.md  DEPENDENCIES.md  LICENSE  LICENSE_POLICY.md  README.md  WORK_LOG.md  build-error.txt  imgui.ini  vcpkg.json
docs/: coding_rules.md  final_spec_v6.md  final_spec_v6_phase2_step1a_scene_cut_model_policy.md  final_spec_v6_phase2_step1b_project_active_cut_bridge_policy.md  final_spec_v6_phase2_step1c_project_structure_status_policy.md  final_spec_v6_phase2_step1d_cut_cell_timesheet_bridge_policy.md  final_spec_v6_phase2_step2a_project_layout_paths_policy.md  final_spec_v6_phase2_step2aa_app_drawing_timesheet_split_policy.md  final_spec_v6_phase2_step2ab_app_drawing_timesheet_selftest_policy.md  final_spec_v6_phase2_step2ac_preview_helper_split_policy.md  final_spec_v6_phase2_step2ac_wip_local_state.md  final_spec_v6_phase2_step2ad_timesheet_viewmodel_split_policy.md  final_spec_v6_phase2_step2ae_workspace_layout_split_policy.md  final_spec_v6_phase2_step2af_preview_residue_cleanup_policy.md  final_spec_v6_phase2_step2ag_app_drawing_panels_split_policy.md  final_spec_v6_phase2_step2ah_app_drawing_canvas_split_policy.md  final_spec_v6_phase2_step2ai_timesheet_playback_helper_policy.md  final_spec_v6_phase2_step2aj_timesheet_playback_selftest_policy.md  final_spec_v6_phase2_step2b_scene_cut_min_save_policy.md  final_spec_v6_phase2_step2c_cell_layout_min_save_policy.md  final_spec_v6_phase2_step2d_layer_layout_save_policy.md  final_spec_v6_phase2_step2d_layer_layout_selftest_fix_policy.md  final_spec_v6_phase2_step2e_project_layout_save_entry_policy.md  final_spec_v6_phase2_step2f_app_save_connection_policy.md  final_spec_v6_phase2_step2g_project_layout_read_entry_policy.md  final_spec_v6_phase2_step2h_new_layout_load_policy.md  final_spec_v6_phase2_step2i_app_new_layout_load_policy.md  final_spec_v6_phase2_step2i_cleanup_bad_drawing_io_policy.md  final_spec_v6_phase2_step2i_cmake_target_fix_policy.md  final_spec_v6_phase2_step2i_header_only_stroke_fix_policy.md  final_spec_v6_phase2_step2j_legacy_cleanup_policy.md  final_spec_v6_phase2_step2k_app_io_inventory.md  final_spec_v6_phase2_step2k_app_io_inventory_cleanup_applyfix_policy.md  final_spec_v6_phase2_step2k_inventory_ps51_fix_policy.md  final_spec_v6_phase2_step2l_app_projectio_direct_fix_policy.md  final_spec_v6_phase2_step2m_projectio_usage_audit.md  final_spec_v6_phase2_step2m_projectio_usage_audit_policy.md  final_spec_v6_phase2_step2n_new_layout_load_fidelity_policy.md  final_spec_v6_phase2_step2o_project_metadata_motionkeys_policy.md  final_spec_v6_phase2_step2p_roundtrip_signature_policy.md  (+68 more)
my_anime_project/: app_state.json  project.json
projects/: current_project.perapera_project.txt
src/app/: main.cpp
src/brush/: BrushEngine.h  BrushSettings.h  MyPaintBrushEngine.cpp  MyPaintBrushEngine.h  SimpleBrushEngine.cpp  SimpleBrushEngine.h
src/camera/: CameraAnimation.cpp  CameraAnimation.h  ShotCamera2D.cpp  ShotCamera2D.h  ShotCameraAnimation.cpp  ShotCameraAnimation.h  ShotCameraController2D.cpp
src/core/: CameraResolver.cpp  CameraResolver.h  CameraSettings.h  Cell.cpp  Cell.h  CellMotionResolver.cpp  CellMotionResolver.h  CellOrderResolver.h  Cut.h  CutCellTimesheetBridge.h  Frame.cpp  Frame.h  Layer.cpp  Layer.h  Project.cpp  Project.h  ProjectActiveCutBridge.h  ProjectStructureStatus.h  Scene.h  ScenePlate.cpp  ScenePlate.h  Stroke.cpp  Stroke.h  StrokePoint.h  Timesheet.cpp  Timesheet.h  TimesheetInbetweenPlanner.cpp  TimesheetInbetweenPlanner.h  TimesheetInbetweenResolver.cpp  TimesheetInbetweenResolver.h  TimesheetResolver.cpp  TimesheetResolver.h  TimesheetSceneResolver.cpp  TimesheetSceneResolver.h  WorkCanvas.h
src/drawing/: AnimationFrame.cpp  AnimationFrame.h  Brush.cpp  Brush.h  DrawingLayer.cpp  DrawingLayer.h  Stroke.cpp  Stroke.h  WorkCanvas.cpp  WorkCanvas.h
src/export/: FfmpegExporter.cpp  FfmpegExporter.h  PngExporter.cpp  PngExporter.h
src/fill/: FloodFill.cpp  FloodFill.h
src/io/: CellLayoutIO.cpp  CellLayoutIO.h  CutIO.cpp  CutIO.h  FfmpegRunner.cpp  FfmpegRunner.h  LayerLayoutIO.cpp  LayerLayoutIO.h  PngExporter.cpp  PngExporter.h  PngExporterModes.cpp  PngTimesheetExporter.cpp  PngTimesheetExporter.h  ProjectIO.cpp  ProjectIO.h  ProjectLayoutLoadEntry.cpp  ProjectLayoutLoadEntry.h  ProjectLayoutPaths.h  ProjectLayoutReadEntry.cpp  ProjectLayoutReadEntry.h  ProjectLayoutSaveEntry.cpp  ProjectLayoutSaveEntry.h  SceneCutLayoutIO.cpp  SceneCutLayoutIO.h  TimesheetIO.cpp  TimesheetIO.h
src/project/: DrawingNewLayoutIO.cpp  DrawingNewLayoutIO.h  RenderFormat.cpp  RenderFormat.h
src/render/: CanvasBitmap.cpp  CanvasBitmap.h  CanvasRenderer.cpp  CanvasRenderer.h  CanvasRendererSupport.cpp  CanvasRendererSupport.h
src/ui/: App.cpp  App.h  Theme.h  (+34 more)
tools/: APPLY_TIMESHEET_STEP_E2_DISPLAY_SYNC.ps1  APPLY_TIMESHEET_STEP_E_DISPLAY.ps1  VERIFY_CELL_SAVE_LOAD.ps1  app_drawing_mode_eraser_selftest.cpp  app_drawing_mode_preview_selftest.cpp  app_drawing_mode_timesheet_selftest.cpp  app_project_io_support_selftest.cpp  camera_resolver_selftest.cpp  canvas_renderer_support_selftest.cpp  cell_layout_io_selftest.cpp  cell_motion_resolver_selftest.cpp  cell_order_resolver_selftest.cpp  cell_panel_model_selftest.cpp  cell_timesheet_alignment_selftest.cpp  cut_cell_timesheet_bridge_selftest.cpp  cut_io_selftest.cpp  drawing_new_layout_io_selftest.cpp  layer_layout_io_selftest.cpp  png_timesheet_exporter_selftest.cpp  project_active_cut_bridge_selftest.cpp  project_layout_load_entry_selftest.cpp  project_layout_paths_selftest.cpp  project_layout_read_entry_selftest.cpp  project_layout_save_entry_selftest.cpp  project_structure_status_selftest.cpp  scene_cut_layout_io_selftest.cpp  scene_cut_model_selftest.cpp  scene_plate_image_path_selftest.cpp  scene_plate_selftest.cpp  timesheet_inbetween_planner_selftest.cpp  timesheet_inbetween_resolver_selftest.cpp  timesheet_io_selftest.cpp  timesheet_panel_bridge_selftest.cpp  timesheet_resolver_selftest.cpp  timesheet_scene_resolver_selftest.cpp
(+60 files in other folders)
